<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/mainLogoColor"
        android:textSize="@dimen/main_title_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:gravity="center"
        android:text="@string/main_subtitle"
        android:textColor="@color/mainSubTitleColor"
        android:textSize="@dimen/main_subtitle_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btNewGame"
        style="@style/custom_button"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="42dp"
        android:text="@string/button_new_game"
        app:layout_constraintBottom_toTopOf="@+id/btExit"
        app:layout_constraintEnd_toEndOf="@+id/btExit"
        app:layout_constraintStart_toStartOf="@+id/btExit" />

    <Button
        android:id="@+id/btExit"
        style="@style/custom_button"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button_exit"
        android:textSize="@dimen/text_button_font_size"
        app:layout_constraintBottom_toTopOf="@+id/tvFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/developed_by"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>